fix: increase muted contrast on light theme

--- a/app/com/styles/theme.css
+++ b/app/com/styles/theme.css
@@ -14,7 +14,7 @@
 		--secondary-fg: 24 24 27; /* zinc-900 */
 
 		--muted: 244 244 245; /* zinc-100 */
-		--muted-fg: 113 113 122; /* zinc-500 */
+		--muted-fg: 82 82 91; /* zinc-600 */
 
 		--input: 161 161 170; /* zinc-500 */
 		--divider: 212 212 216; /* zinc-300 */
